--- a/shared_resources/sass/tool/_top-five-article.scss
+++ b/shared_resources/sass/tool/_top-five-article.scss
@@ -121,6 +121,8 @@
 }
 
 .tool-social-vertical {
+	margin-bottom: 0px;
+
 	li {
 		display: inline-block;
 	}
@@ -173,6 +175,8 @@
 	}
 
 	.tool-social-vertical {
+		margin-bottom: 0px;
+		
 		li {
 			margin-bottom: 0px;
 		}
